--- a/04_16/Untitled.ipynb
+++ b/04_16/Untitled.ipynb
@@ -23151,7 +23151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23162,7 +23162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23175,8 +23175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
-   "metadata": {},
+   "execution_count": 553,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -23194,7 +23196,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(xdata, ydata, test_size=0.3, random_state=777)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 620,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(329, 17)\n",
+      "(329, 1)\n",
+      "(141, 17)\n",
+      "(141, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape) # 329, 17\n",
+    "print(Y_train.shape)\n",
+    "print(X_test.shape) # 141, 17\n",
+    "print(Y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -23213,19 +23248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [],
    "source": [
     "x=tf.placeholder(tf.float32, shape=[None,17])\n",
     "y=tf.placeholder(tf.float32, shape=[None,1])\n",
-    "w=tf.Variable(tf.random_normal([17,1], mean=0.0001, stddev=0.0001))\n",
-    "b=tf.Variable(tf.random_normal([1]))"
+    "w=tf.Variable(tf.random_normal([17,1])) * 8e-3\n",
+    "b=tf.Variable(tf.random_normal([1])) * 8e-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23235,7 +23270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23244,124 +23279,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted=tf.cast(hf>0.5, dtype=tf.float32)\n",
+    "predicted=tf.cast(hf>0.7, dtype=tf.float32)\n",
     "accuracy=tf.reduce_mean(tf.cast(tf.equal(predicted,y), dtype=tf.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 626,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 14.928419\n",
-      "200 7.0338736\n",
-      "400 -0.8527097\n",
-      "600 -8.731325\n",
-      "800 -16.602036\n",
-      "1000 -24.464989\n",
-      "1200 -32.320393\n",
-      "1400 -40.16845\n",
-      "1600 -48.009514\n",
-      "1800 -55.843895\n",
-      "2000 -63.672016\n",
-      "2200 -71.49416\n",
-      "2400 -79.310745\n",
-      "2600 -87.122215\n",
-      "2800 -94.92904\n",
-      "3000 -102.7313\n",
-      "3200 -110.52962\n",
-      "3400 -118.3244\n",
-      "3600 -126.1158\n",
-      "3800 -133.90411\n",
-      "4000 -141.68968\n",
-      "4200 -149.4725\n",
-      "4400 -157.25412\n",
-      "4600 -165.03195\n",
-      "4800 -172.80894\n",
-      "5000 -180.58516\n",
-      "5200 -188.35823\n",
-      "5400 -196.13016\n",
-      "5600 -203.90152\n",
-      "5800 -211.67241\n",
-      "6000 -219.44283\n",
-      "6200 -227.20996\n",
-      "6400 -234.9767\n",
-      "6600 -242.74315\n",
-      "6800 -250.50934\n",
-      "7000 -258.2752\n",
-      "7200 -266.0409\n",
-      "7400 -273.8064\n",
-      "7600 -281.57178\n",
-      "7800 -289.33694\n",
-      "8000 -297.10193\n",
-      "8200 -304.8669\n",
-      "8400 -312.63153\n",
-      "8600 -320.39624\n",
-      "8800 -328.16104\n",
-      "9000 -335.92545\n",
-      "9200 -343.69022\n",
-      "9400 -351.45425\n",
-      "9600 -359.21854\n",
-      "9800 -366.98285\n",
-      "10000 -374.74747\n",
-      "10200 -382.51117\n",
-      "10400 -390.27484\n",
-      "10600 -398.0386\n",
-      "10800 -405.8029\n",
-      "11000 -413.56583\n",
-      "11200 -421.32956\n",
-      "11400 -429.0928\n",
-      "11600 -436.8565\n",
-      "11800 -444.6204\n",
-      "12000 -452.38498\n",
-      "12200 -460.1473\n",
-      "12400 -467.9128\n",
-      "12600 -475.6805\n",
-      "12800 -483.4369\n",
-      "13000 -491.1923\n",
-      "13200 -498.95197\n",
-      "13400 -506.70935\n",
-      "13600 -514.4722\n",
-      "13800 -522.2237\n",
-      "14000 -529.9923\n",
-      "14200 -537.7414\n",
-      "14400 -545.5254\n",
-      "14600 -553.23975\n",
-      "14800 -561.0402\n",
-      "15000 -568.7997\n",
-      "15200 -576.605\n",
-      "15400 -584.38696\n",
-      "15600 -592.1183\n",
-      "15800 -599.893\n",
-      "16000 -607.74274\n",
-      "16200 nan\n",
-      "16400 nan\n",
-      "16600 nan\n",
-      "16800 nan\n",
-      "17000 nan\n",
-      "17200 nan\n",
-      "17400 nan\n",
-      "17600 nan\n",
-      "17800 nan\n",
-      "18000 nan\n",
-      "18200 nan\n",
-      "18400 nan\n",
-      "18600 nan\n",
-      "18800 nan\n",
-      "19000 nan\n",
-      "19200 nan\n",
-      "19400 nan\n",
-      "19600 nan\n",
-      "19800 nan\n",
-      "20000 nan\n"
+      "0 : 0.29715934\n",
+      "200 : 0.29665935\n",
+      "400 : 0.29615998\n",
+      "600 : 0.2956601\n",
+      "800 : 0.2951601\n",
+      "1000 : 0.29466012\n",
+      "1200 : 0.29416013\n",
+      "1400 : 0.2936607\n",
+      "1600 : 0.2931602\n",
+      "1800 : 0.29266077\n",
+      "2000 : 0.29216078\n",
+      "2200 : 0.291661\n",
+      "2400 : 0.29116097\n",
+      "2600 : 0.29066077\n",
+      "2800 : 0.29016107\n",
+      "3000 : 0.28966153\n",
+      "3200 : 0.28916118\n",
+      "3400 : 0.28866145\n",
+      "3600 : 0.28816155\n",
+      "3800 : 0.28766152\n",
+      "4000 : 0.28716248\n",
+      "4200 : 0.2866611\n",
+      "4400 : 0.28616166\n",
+      "4600 : 0.28566244\n",
+      "4800 : 0.28516245\n",
+      "5000 : 0.28466198\n",
+      "5200 : 0.28416234\n",
+      "5400 : 0.28366253\n",
+      "5600 : 0.2831625\n",
+      "5800 : 0.28266293\n",
+      "6000 : 0.28216308\n",
+      "6200 : 0.28166264\n",
+      "6400 : 0.28116322\n",
+      "6600 : 0.2806629\n",
+      "6800 : 0.28016323\n",
+      "7000 : 0.27966335\n",
+      "7200 : 0.27916345\n",
+      "7400 : 0.2786637\n",
+      "7600 : 0.27816358\n",
+      "7800 : 0.27766383\n",
+      "8000 : 0.27716422\n",
+      "8200 : 0.2766639\n",
+      "8400 : 0.276164\n",
+      "8600 : 0.2756644\n",
+      "8800 : 0.27516407\n",
+      "9000 : 0.2746642\n",
+      "9200 : 0.27416423\n",
+      "9400 : 0.27366436\n",
+      "9600 : 0.27316466\n",
+      "9800 : 0.27266464\n",
+      "10000 : 0.2721647\n",
+      "10200 : 0.27166516\n",
+      "10400 : 0.27116534\n",
+      "10600 : 0.2706654\n",
+      "10800 : 0.27016512\n",
+      "11000 : 0.26966533\n",
+      "11200 : 0.26916546\n",
+      "11400 : 0.26866525\n",
+      "11600 : 0.26816568\n",
+      "11800 : 0.26766533\n",
+      "12000 : 0.26716614\n",
+      "12200 : 0.26666608\n",
+      "12400 : 0.26616612\n",
+      "12600 : 0.26566592\n",
+      "12800 : 0.26516628\n",
+      "13000 : 0.26466665\n",
+      "13200 : 0.2641665\n",
+      "13400 : 0.26366636\n",
+      "13600 : 0.26316667\n",
+      "13800 : 0.26266673\n",
+      "14000 : 0.26216713\n",
+      "14200 : 0.2616668\n",
+      "14400 : 0.2611675\n",
+      "14600 : 0.2606674\n",
+      "14800 : 0.2601672\n",
+      "15000 : 0.25966734\n",
+      "15200 : 0.25916725\n",
+      "15400 : 0.2586675\n",
+      "15600 : 0.25816786\n",
+      "15800 : 0.25766784\n",
+      "16000 : 0.25716865\n",
+      "16200 : 0.2566681\n",
+      "16400 : 0.2561682\n",
+      "16600 : 0.25566852\n",
+      "16800 : 0.25516823\n",
+      "17000 : 0.25466862\n",
+      "17200 : 0.2541685\n",
+      "17400 : 0.25366864\n",
+      "17600 : 0.25316867\n",
+      "17800 : 0.2526691\n",
+      "18000 : 0.25216904\n",
+      "18200 : 0.25166944\n",
+      "18400 : 0.25116917\n",
+      "18600 : 0.25066927\n",
+      "18800 : 0.2501691\n",
+      "19000 : 0.24966927\n",
+      "19200 : 0.24917004\n",
+      "19400 : 0.24866977\n",
+      "19600 : 0.24816953\n",
+      "19800 : 0.24766977\n",
+      "20000 : 0.24717037\n",
+      "정확도: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0] %\n"
      ]
     }
    ],
@@ -23369,17 +23405,12 @@
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    for step in range(20001):\n",
-    "        _,cv=sess.run([train, cost], feed_dict={x:xdata, y:ydata})\n",
+    "        _,cv=sess.run([train, cost], feed_dict={x:X_train, y:Y_train})\n",
     "        if step%200==0:\n",
-    "            print(step, cv)"
+    "            print(step,\":\",cv)\n",
+    "    av=sess.run([accuracy], feed_dict={x:X_test,y:Y_test})\n",
+    "    print(\"정확도:\",av*100,\"%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
